samples/_failures_safe/1761604000_5af81d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cbcb8abf.c: In function ‘main’:
./samples/SAFE/__tmp_cbcb8abf.c:142:46: error: expected ‘)’ at end of input
  142 |     print_hex(decompressed.data, decompressed
      |              ~                               ^
      |                                              )
./samples/SAFE/__tmp_cbcb8abf.c:142:34: error: incompatible type for argument 2 of ‘print_hex’
  142 |     print_hex(decompressed.data, decompressed
      |                                  ^~~~~~~~~~~~
      |                                  |
      |                                  Buffer
./samples/SAFE/__tmp_cbcb8abf.c:99:51: note: expected ‘size_t’ {aka ‘long unsigned int’} but argument is of type ‘Buffer’
   99 | static void print_hex(const uint8_t* data, size_t size) {
      |                                            ~~~~~~~^~~~
./samples/SAFE/__tmp_cbcb8abf.c:142:5: error: expected declaration or statement at end of input
  142 |     print_hex(decompressed.data, decompressed
      |     ^~~~~~~~~
